Ground work for graphics system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ target_include_directories(${CMAKE_PROJECT_NAME}
     PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/waddle/"
 )
 
-target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad)
+target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad m)
 
 if (EMSCRIPTEN)
     execute_process(COMMAND emcc --cflags OUTPUT_VARIABLE EM_CFLAGS)
