--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.31)
 project(forge-of-titans)
 
 add_subdirectory("third_party/glad")
+add_subdirectory("third_party/freetype")
 
 file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCE})
@@ -27,7 +28,7 @@ target_include_directories(${CMAKE_PROJECT_NAME}
     PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/waddle/"
 )
 
-target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad m)
+target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad m freetype)
 
 if (EMSCRIPTEN)
     execute_process(COMMAND emcc --cflags OUTPUT_VARIABLE EM_CFLAGS)
