--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(forge-of-titans)
 
 add_subdirectory("third_party/glad")
 add_subdirectory("third_party/freetype")
+add_subdirectory("third_party/stb")
 
 file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCE})
@@ -28,7 +29,7 @@ target_include_directories(${CMAKE_PROJECT_NAME}
     PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/waddle/"
 )
 
-target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad m freetype)
+target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad m freetype stb)
 
 if (EMSCRIPTEN)
     execute_process(COMMAND emcc --cflags OUTPUT_VARIABLE EM_CFLAGS)
