--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.31)
-project(forge-of-titans)
 
-add_subdirectory("engine/")
+add_subdirectory("third_party/glad")
+add_subdirectory("third_party/stb")
+add_subdirectory("third_party/freetype")
 
 file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
-add_executable(${CMAKE_PROJECT_NAME} ${SOURCE})
+add_library(engine ${SOURCE})
 
 # Make __FILE__ macro return a relative path.
 foreach(f IN LISTS SOURCE)
@@ -12,27 +13,26 @@ foreach(f IN LISTS SOURCE)
     set_source_files_properties(${f} PROPERTIES COMPILE_DEFINITIONS "__FILE__=\"${b}\"")
 endforeach()
 
-set_target_properties(${CMAKE_PROJECT_NAME}
+set_target_properties(engine
     PROPERTIES
     C_STANDARD "99"
     C_STANDARD_REQUIRED true
-    EXPORT_COMPILE_COMMANDS true
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
     COMPILE_FLAGS "-Wall -Wextra -Wno-builtin-macro-redefined"
 )
 
-target_include_directories(${CMAKE_PROJECT_NAME}
-    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/"
+target_include_directories(engine
+    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/"
     PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/"
-    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/waddle/"
+    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/waddle/"
 )
 
-target_link_libraries(${CMAKE_PROJECT_NAME} engine)
+target_link_libraries(engine glfw glad m freetype stb)
 
 if (EMSCRIPTEN)
     execute_process(COMMAND emcc --cflags OUTPUT_VARIABLE EM_CFLAGS)
     get_target_property(CFLAGS ${CMAKE_PROJECT_NAME} COMPILE_FLAGS)
-    set_target_properties(${CMAKE_PROJECT_NAME}
+    set_target_properties(engine
         PROPERTIES
         COMPILE_FLAGS "${CFLAGS} ${EM_CFLAGS}"
     )
